Calculate the coexistence matrix on demand